[project]
name = "the-hardest-test-suite"
version = "1.0.0"
description = "Integration-testing a nondeterministic CV system with pytest — EuroPython 2026 demo"
requires-python = ">=3.12"
dependencies = [
    "pillow>=12.3.0",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "pytest-check>=2.8.0",
    "pytest-harvest>=1.10.5",
    "pytest-html>=4.2.0",
    "scipy>=1.18.0",
    "tabulate>=0.10.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
